chore: round-2 codemods — Javadoc TODO stubs, Locale literals, deprecated-class suppression
Drives the VSCode/Eclipse-JDT Problems count from 1216 (post-PR-#271)
toward the < 1k goal. Three new codemods + a v2 fix for one of the
originals; each is idempotent + re-runnable.

  1. codemod-todo-stubs-v2.py — handles the Javadoc block-comment form
     (` * TODO …`) that v1 missed. Removed 88 IDE-generated stubs across
     42 files. Pattern was inside class-level Javadoc:
       /**
        * TODO To change the template for this generated type comment go to Window -
        * Preferences - Java - Code Style - Code Templates
        */

  2. codemod-suppressions.py (rerun against fresh export) — caught 33
     additional dead @SuppressWarnings across 14 files that the first
     pass left because JDT only flagged them after the round-1 cleanup.

  3. codemod-locale-literals.py — 49 replacements across 22 files:
       new Locale("en_US")           → Locale.US
       new Locale("de_DE")           → Locale.GERMANY
       new Locale("en", "US")        → Locale.US
       new Locale("xx")              → Locale.of("xx")  (Java 19+ factory)
     Skips runtime expressions.

  4. codemod-deprecated-enclosing.py — adds @SuppressWarnings("deprecation")
     at the class level on 6 already-@Deprecated classes (SPSSReportBean,
     DataType, ResponseType, GroupRole + 2 others). Silences ~60
     "enclosing type X is deprecated, perhaps this member should be marked
     as deprecated, too?" JDT diagnostics.

Projected delta: ~230 additional Problems. Was 1216; should land near 986.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>